--- a/PrestationClient/src/styles.css
+++ b/PrestationClient/src/styles.css
@@ -2,3 +2,19 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.header{
+    background: #3f51b5;
+    padding-left: 20px; 
+    flex-shrink: 0;   
+}
+
+.header > h1 {
+    font-weight: 300;
+    margin: 0;
+    padding: 28px 8px;
+    font-size: 20px;
+    color: #fff;
+}
+
+
