--- a/PrestationClient/src/app/code-chantier/create-code-chantier-dialog/create-code-chantier-dialog.component.html
+++ b/PrestationClient/src/app/code-chantier/create-code-chantier-dialog/create-code-chantier-dialog.component.html
@@ -14,6 +14,14 @@
     </mat-error>
   </mat-form-field>
 
+  <mat-form-field>
+    <input matInput placeholder="Client" formControlName="client">
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Produit" formControlName="produit">
+  </mat-form-field>
+
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button (click)="cancel()">Cancel</button>
