--- a/PrestationClient/src/app/user/user.component.html
+++ b/PrestationClient/src/app/user/user.component.html
@@ -12,7 +12,7 @@
   </mat-form-field>
 </div>
 
-<mat-table matSort mat-table [dataSource]="dataSource">
+<mat-table class="users" matSort mat-table [dataSource]="dataSource">
 
   <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
