--- a/PrestationClient/src/styles.css
+++ b/PrestationClient/src/styles.css
@@ -18,4 +18,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: #fff;
 }
 
+.mat-row:nth-child(even){
+    background-color:white;
+    }
+
+.mat-row:nth-child(odd){
+    background-color:#fafafa;
+    }
+
 
