--- a/PrestationClient/src/app/prestation/prestation.component.html
+++ b/PrestationClient/src/app/prestation/prestation.component.html
@@ -15,6 +15,10 @@
           {{year}}
         </mat-option>
       </mat-select>
+
+      <a mat-button href="{{getExportUrl()}}">
+        <mat-icon>import_export</mat-icon>&nbsp;Export
+      </a>
     </h1>
   </div>
   <div class="month-total">
@@ -22,6 +26,8 @@
       {{getTotal() | duration}}
     </h1>
   </div>
+
+
 
 
 </div>
